src/pages/HomePage/HomePage.module.css
.pageWrapper {
  padding: 20px;
  background-color: var(--white);
  min-height: 100vh;
}

.hero {
  background-color: var(--accent-orange);
  border-radius: 30px;
  min-height: 390px;
  width: 100%;
  margin-top: 0;
  margin: 0 auto;
  padding-top: 60px;

  display: flex;
  flex-direction: column;
}

.contentWrapper {
  padding-top: 40px;
}

.title {
  width: 100%;
  max-width: 295px;
  font-weight: 700;
  font-size: 50px;
  line-height: 0.96;
  letter-spacing: -0.03em;
  color: var(--white);

  word-wrap: break-word;
}

.title span {
  color: rgba(255, 255, 255, 0.4);
}

.subtitle {
  font-weight: 500;
  font-size: 14px;
  line-height: 1.28571;
  letter-spacing: -0.02em;
  color: var(--white);
  margin-top: 24px;
}

@media screen and (max-width: 374px) {
  .title {
    font-size: 44px;
  }

  .subtitle {
    font-size: 11px;
  }
}

.imageWrapper {
  width: 100%;
  height: 409px;
  border-radius: 30px;
  overflow: hidden;
  display: block;
  flex-shrink: 0;
}

.heroImage {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  border-radius: 30px;
}

@media screen and (min-width: 768px) {
  .hero {
    width: 100%;
    max-width: none;
    border-radius: 60px;
  }

  .title {
    margin-top: 60px;
    max-width: 640px;
    font-weight: 700;
    font-size: 80px;
  }

  .subtitle {
    max-width: 255px;
    font-weight: 500;
    font-size: 18px;
    line-height: 1;
    margin-left: 400px;
  }

  .imageWrapper {
    height: 496px;
    border-radius: 60px;
  }
}

@media screen and (min-width: 1280px) {
  .hero {
    width: 100%;
    min-height: 384px;

    border-radius: 60px;
  }

  .title {
    max-width: 760px;
    font-size: 90px;
    line-height: 1;
    margin-top: 112px;
  }

  .textWrapper {
    display: flex;
    gap: 73px;
  }

  .subtitle {
    max-width: 255px;
    font-size: 18px;
    margin-top: 198px;
  }

  .imageWrapper {
    height: 384px;
    width: 100%;

    margin: 0 auto;
  }
}

